fix: pagination, dto validation and mapping fixes